@@ -49,6 +49,7 @@ Bug fixes
  * Ensure that number localisation is not applied to object IDs within admin templates (Tom Hendrikx)
  * Paginating with a search present was always returning the 1st page in Internet Explorer 10 & 11 (Ralph Jacobs)
  * RoutablePageMixin and wagtailforms previews now set the ``request.is_preview`` flag (Wietze Helmantel)
+ * The save and preview buttons in the page editor are now mobile-friendly (Maarten Kling)
 
 
 Upgrade considerations
