@@ -37,6 +37,7 @@ Changelog
  * Fix: Ensure that number localisation is not applied to object IDs within admin templates (Tom Hendrikx)
  * Fix: Paginating with a search present was always returning the 1st page in Internet Explorer 10 & 11 (Ralph Jacobs)
  * Fix: RoutablePageMixin and wagtailforms previews now set the `request.is_preview` flag (Wietze Helmantel)
+ * Fix: The save and preview buttons in the page editor are now mobile-friendly (Maarten Kling)
 
 
 1.9 (16.02.2017)
